--- a/src/main/resources/templates/employees-list.html
+++ b/src/main/resources/templates/employees-list.html
@@ -14,11 +14,18 @@
 <h1>Employees List</h1>
 
 <div>
+    <a th:href="@{/employees/form}"
+       class="btn btn-primary btn-sm mb-3">
+        Add Employee
+    </a>
+</div>
+<div>
     <table class="table">
         <thead>
         <tr>
             <th scope="col"> Id </th>
             <th scope="col"> Name </th>
+            <th scope="col"> Action </th>
         </tr>
         </thead>
         <tbody>
@@ -29,6 +36,18 @@
             scope="row">
             <td><span th:text="${employee.Id}"> Id </span></td>
             <td><span th:text="${employee.name}"> Name </span></td>
+            <td>
+                <a th:href="@{/employees/formForUpdate(employeeId=${employee.Id})}"
+                   class="btn btn-info btn-sm mb-3">
+                    Update
+                </a>
+
+                <a th:href="@{/employees/delete(employeeId=${employee.Id})}"
+                   class="btn btn-danger btn-sm mb-3"
+                   onclick="if ( !(confirm('Are you sure you want to delete this employee?'))) return false">
+                    Delete
+                </a>
+            </td>
         </tr>
         </tbody>
     </table>
